<resources>
    <string name="app_name">MyMarq</string>
    <string name="button">GO!</string>
    <string name="button_OE">Olin Engineering</string>
    <string name="pick_a">Select Campus Building</string>
    <string-array name="building_names">
        <item>Click Here</item>
        <item>Alumni Memorial Union</item>
        <item>Cudahy Hall</item>
        <item>Engineering Hall</item>
        <item>Haggerty Hall</item>
        <item>Marquette Hall</item>
        <item>Memorial Library</item>
        <item>Olin Engineering</item>
        <item>Raynor Library</item>
    </string-array>
    <string name="f1">Floor 1</string>
    <string name="f2">Floor 2</string>
    <string name="f3">Floor 3</string>
    <string name="f4">Floor 4</string>
    <string name="f5">Floor 5</string>
    <string name="fb">Lower Level</string>
    <string name="get_scroll_position">Get Scroll Position</string>
    <string name="get_zoomed_rect">Get zoomed rectangle</string>
    <string name="get_current_zoom">Get current zoom</string>
    <string name="building">Building</string>
</resources>
