<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mymarq.Ehall_F1">

    <com.example.mymarq.TouchImageView
        android:id="@+id/amu1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/amu_1" />

    <com.example.mymarq.TouchImageView
        android:id="@+id/amu2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/building"
        app:srcCompat="@drawable/amu_2" />
    <com.example.mymarq.TouchImageView
        android:id="@+id/amu3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/building"
        app:srcCompat="@drawable/amu_3" />

    <com.example.mymarq.TouchImageView
        android:id="@+id/amu4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/building"
        app:srcCompat="@drawable/amu_4" />

    <com.example.mymarq.TouchImageView
        android:id="@+id/amu5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/building"
        app:srcCompat="@drawable/amu_5" />



    <LinearLayout
        android:id="@+id/top_text_line"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <TextView
            android:text="@string/get_scroll_position"
            android:paddingRight="3dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/scroll_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/top_text_line"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:background="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <TextView
            android:text="@string/get_zoomed_rect"
            android:paddingRight="3dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/zoomed_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/current_zoom"
        android:text="@string/get_current_zoom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</RelativeLayout>
